--- a/reservia.html
+++ b/reservia.html
@@ -19,10 +19,12 @@
 
 			<nav class="nav">
 				<ul>
-					<li><a class="lienheader" href="#hebergement">Hébergements</a></li>
-					<li><a class="lienheader" href="activite">Activités</a></li>
+					<li><a class="lienheader" href="#hebergement" data-active="true">Hébergements</a></li>
+					<li><a class="lienheader" href="#activite" data-active="false">Activités</a></li>
 				</ul>
 			</nav>
+			<div class="blueline"></div> 
+			<div class="greyline"></div>
 
 			<a class="signup">S'inscrire</a>
 		</header>
@@ -38,10 +40,13 @@
 			<br/>
 			<div role="heading" aria-hidden="true" aria-level="2" aria-label="Recherche des informations"></div>
 			<form class="form">
-				<i class="fas fa-map-marker-alt"></i>
+				<i class="fas fa-map-marker-alt" id="mapmarker"></i>
 				<input type="search" class="search" placeholder='Marseille, France' aria-label="Champ_Recherche">
-				<button type="button" class="recherche" aria-label="button de recherche"><span class="buttonRecherche">Recherche</span></button>
+				<button type="button" class="recherche" aria-label="button de recherche"> 
+					<i class="fas fa-search" id="searchbutton"></i>
+					<span class="buttonRecherche">Recherche</span></button>
 			</form>
+
 			<section id="filtres">
 				<h2 aria-label="filter">Filtres</h2>
 				<div class="filtres">
@@ -68,13 +73,13 @@
 					<i class="fas fa-info icone"></i>
 				</div>
 				<p class="information">
-					Plus de 500 logements sont disponible dans cette ville
+					Plus de 500 logements sont disponibles dans cette ville
 				</p>
 			</div>
 			<section class="contenuhebergement">
-				<div class="hebergement">
+				<div class="hebergement" id="hebergement">
 					<header>
-						<h2>Hébergements à Marseille</h2>
+						<h2 class="">Hébergements à Marseille</h2>
 					</header>
 					
 					<div class="firstline">
@@ -167,7 +172,7 @@
 								<li><i class="fas fa-star etoilehebergement" data-active="true"></i></li>
 							</ul>
 						</figure>
-						<span id="afficher">Afficher plus</span>
+						<div id="afficher">Afficher plus</div>
 					</div>
 
 					
